  * Added love.math.encode/decode, which support hex and base64.
  * Added love.math.hash, which supports MD5, SHA-1 and the SHA-2 family.
  * Added support for different ImageData formats, including RGBA8 (the default), RGBA16, RGBA16F, and RGBA32F.
  * Added the ability to load Radiance HDR, OpenEXR, and 16 bit PNG images.
  * Added love.graphics.getRawImageFormats.

  * Changed all color values to be in the range 0-1, rather than 0-255.
  * Changed love.graphics.print and friends to ignore carriage returns.
  * Changed the 'multiply' blend mode to error if not used with the 'premultiplied' blend alpha mode, since the formula only works with that anyway.
  * Changed the audio playback APIs drastically.

  * Removed the default source type for love.audio.newSource.
  * Removed variant of love.filesystem.newFileData which takes base64 data, use love.math.decode instead.

  * Updated Source:seek to work if the Source isn't playing.
  * Updated love.math.random to have improved numeric distribution.

LOVE 0.10.2 [Super Toast]
-------------------------

Released: N/A

  * Added lovec.exe in Windows. It is the same as love.exe but built with the Console subsystem, so it always uses or provides a console.
  * Added 'shaderswitches' field to the table returned by love.graphics.getStats.
  * Added Quad:getTextureDimensions.
  * Added PrismaticJoint:getAxis and WheelJoint:getAxis.
  * Added 2-point version of love.physics.newRevoluteJoint.

  * Fixed love on iOS 6.
  * Fixed os.execute always returning -1 on Linux.
  * Fixed a hang at the end of video playback with some video files.
  * Fixed the video decoding thread to not do any work when there are no videos to decode.
  * Fixed a rare bug in Source:play for streaming Sources if the associated OpenAL source object was previously used for a static Source.
  * Fixed corrupted Font glyphs in rare cases.
  * Fixed stencils inside Canvases on some OpenGL ES 2 devices.